2012-05-04  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Configuration and jobOption updates.

2012-03-27  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloCAF-00-02-00
        * Release 17 version.

2012-02-28  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloCAF-00-01-00
        * Final 15.2.0 version.
