@@ -1,3 +1,6 @@
+2012-06-08  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
+        * Bugfix in ResourceWatcher.py
+
 2012-05-04  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
         * Configuration and jobOption updates.
 
